# pywickdl

./: Cargo.toml
pywickdl/: downloader.py
src/: lib.rs
test/: test.py
